# amplifier-module-provider-bedrock

./: README.md  pyproject.toml
amplifier_module_provider_bedrock/: __init__.py
tests/: __init__.py  test_auto_continuation.py  test_content_blocks.py  test_content_sanitization.py  test_graceful_degradation.py  test_observability.py  test_protocol_compliance.py  test_tool_validation.py
